--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>React App</title>
+    <title>Be The Hero</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
